Fix some layout problems with vinnies page

--- a/vinnies.css
+++ b/vinnies.css
@@ -29,7 +29,6 @@ h1 {
 }
 
 .column-image img {
-  max-width: 500px;
   width: 100%;
   border-radius: 12px;
 }
@@ -46,8 +45,30 @@ h1 {
   font-weight: 900;
 }
 
+.vinnies-shop-grid {
+  grid-row-gap: 80px;
+}
+
+/* Research */
+.research-section {
+  margin-top: 120px;
+}
+
 /* User Finding */
+.user-testing {
+  margin-top: 80px;
+  display: grid;
+  justify-content: center;
+  grid-column-gap: 20px;
+  text-align: justify;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .user-testing-card {
+  margin-top: 20px;
+  padding-left: 4rem;
+  padding-right: 4rem;
+
   background: radial-gradient(
     170.99% 170.99% at 66.95% 165.74%,
     rgba(159, 219, 253, 0.42) 0%,
@@ -61,14 +82,6 @@ h1 {
   border-radius: 12px;
 }
 
-.user-testing {
-  display: grid;
-  justify-content: center;
-  grid-column-gap: 20px;
-  text-align: justify;
-  grid-template-columns: repeat(3, 1fr);
-}
-
 .finding-comment {
   text-align: center;
   max-width: 50ch;
@@ -80,15 +93,6 @@ h1 {
   flex-direction: column;
   align-items: center;
   margin: auto;
-}
-
-.flex-container {
-  margin-top: 20px;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  display: flex;
-  text-align: justify;
-  justify-content: center;
 }
 
 .row {
